{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 21,
  "lineage": "da64a0a6-8adf-50d4-c1ca-92fbd310f5c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8d700173271b8ae",
            "domain": "vpc",
            "id": "eipalloc-0e8d700173271b8ae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-81-210-215.compute-1.amazonaws.com",
            "public_ip": "54.81.210.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-web-eip"
            },
            "tags_all": {
              "Name": "dev-web-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:internet-gateway/igw-0ae49323f69f5291f",
            "id": "igw-0ae49323f69f5291f",
            "owner_id": "099538617322",
            "tags": {
              "Name": "dev-web-igw"
            },
            "tags_all": {
              "Name": "dev-web-igw"
            },
            "vpc_id": "vpc-0e78d712226a8a7bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8d700173271b8ae",
            "connectivity_type": "public",
            "id": "nat-0ed99561faf8378c7",
            "network_interface_id": "eni-0fc1c8cc47beeaa16",
            "private_ip": "10.0.1.36",
            "public_ip": "54.81.210.215",
            "subnet_id": "subnet-0086c053e603d3eda",
            "tags": {
              "Name": "dev-web-nat-gateway"
            },
            "tags_all": {
              "Name": "dev-web-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.pub_sub_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ae49323f69f5291f",
            "id": "r-rtb-0c0a1a5b3ea1abaa31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0a1a5b3ea1abaa3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.custom",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06c255c059a47f2241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ed99561faf8378c7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06c255c059a47f224",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_route_table.custom_1",
            "aws_subnet.pub_sub_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:route-table/rtb-0c0a1a5b3ea1abaa3",
            "id": "rtb-0c0a1a5b3ea1abaa3",
            "owner_id": "099538617322",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-web-public-table"
            },
            "tags_all": {
              "Name": "dev-web-public-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e78d712226a8a7bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:route-table/rtb-06c255c059a47f224",
            "id": "rtb-06c255c059a47f224",
            "owner_id": "099538617322",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-web-private-table"
            },
            "tags_all": {
              "Name": "dev-web-private-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e78d712226a8a7bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd2c760aa78489ed",
            "route_table_id": "rtb-06c255c059a47f224",
            "subnet_id": "subnet-010fdb9b97e9ba84a"
          },
          "dependencies": [
            "aws_route_table.custom_1",
            "aws_subnet.pri_sub_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b6cab3a1b7bdd3b",
            "route_table_id": "rtb-06c255c059a47f224",
            "subnet_id": "subnet-0507fda92665a6ad9"
          },
          "dependencies": [
            "aws_route_table.custom_1",
            "aws_subnet.pri_sub_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080223458e7633aff",
            "route_table_id": "rtb-06c255c059a47f224",
            "subnet_id": "subnet-0a452caf938c4ae5b"
          },
          "dependencies": [
            "aws_route_table.custom_1",
            "aws_subnet.pri_sub_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c8c7756d873fdac",
            "route_table_id": "rtb-0c0a1a5b3ea1abaa3",
            "subnet_id": "subnet-0086c053e603d3eda"
          },
          "dependencies": [
            "aws_route_table.custom",
            "aws_subnet.pub_sub_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073ab47e7058a295d",
            "route_table_id": "rtb-0c0a1a5b3ea1abaa3",
            "subnet_id": "subnet-0b448bb6d51e1fcf7"
          },
          "dependencies": [
            "aws_route_table.custom",
            "aws_subnet.pub_sub_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c20a1270b5cf5d79",
            "route_table_id": "rtb-0c0a1a5b3ea1abaa3",
            "subnet_id": "subnet-0d81c1f468d5fe92b"
          },
          "dependencies": [
            "aws_route_table.custom",
            "aws_subnet.pub_sub_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:subnet/subnet-010fdb9b97e9ba84a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010fdb9b97e9ba84a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099538617322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-web-pri-subnet-1"
            },
            "tags_all": {
              "Name": "dev-web-pri-subnet-1"
            },
            "vpc_id": "vpc-0e78d712226a8a7bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:subnet/subnet-0507fda92665a6ad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0507fda92665a6ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099538617322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-web-pri-subnet-2"
            },
            "tags_all": {
              "Name": "dev-web-pri-subnet-2"
            },
            "vpc_id": "vpc-0e78d712226a8a7bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:subnet/subnet-0a452caf938c4ae5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a452caf938c4ae5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099538617322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-web-pri-subnet-3"
            },
            "tags_all": {
              "Name": "dev-web-pri-subnet-3"
            },
            "vpc_id": "vpc-0e78d712226a8a7bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:subnet/subnet-0086c053e603d3eda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0086c053e603d3eda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099538617322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-web-pub-subnet-1"
            },
            "tags_all": {
              "Name": "dev-web-pub-subnet-1"
            },
            "vpc_id": "vpc-0e78d712226a8a7bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:subnet/subnet-0b448bb6d51e1fcf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b448bb6d51e1fcf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099538617322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-web-pub-subnet-2"
            },
            "tags_all": {
              "Name": "dev-web-pub-subnet-2"
            },
            "vpc_id": "vpc-0e78d712226a8a7bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:subnet/subnet-0d81c1f468d5fe92b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d81c1f468d5fe92b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099538617322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-web-pub-subnet-3"
            },
            "tags_all": {
              "Name": "dev-web-pub-subnet-3"
            },
            "vpc_id": "vpc-0e78d712226a8a7bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099538617322:vpc/vpc-0e78d712226a8a7bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc3e05bab101aaff",
            "default_route_table_id": "rtb-0a33b26ddb5fb66fa",
            "default_security_group_id": "sg-01906881bca1e4912",
            "dhcp_options_id": "dopt-416d2f3a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e78d712226a8a7bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a33b26ddb5fb66fa",
            "owner_id": "099538617322",
            "tags": {
              "Name": "dev-web-vpc"
            },
            "tags_all": {
              "Name": "dev-web-vpc"
            }
          }
        }
      ]
    }
  ]
}